<resources>
    <string name="app_name"></string>
    <string name="homeTitle">Онлайн-калькулятор состояния здоровья</string>
    <string name="playButton">Начать</string>
    <string name="Label1">Пол</string>
    <string name="Label2">Возраст</string>
    <string name="PlayerSetupTitle">Индексы</string>
    <string name="tx1">Индекс массы тела</string>
    <string name="tx2">Счётчик шагов</string>
    <string name="tx3">Коэффициент выносливости</string>
    <string name="tx4">Регуляция сердечно-сосудистой системы</string>
    <string name="tx5">Жизненный индекс</string>
    <string name="tx6">Циркулярно-респираторный коэффициент</string>
    <string name="res">Результаты</string>
    <string name="shDiscr">Короткое описание :</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Дом</string>
    <string name="index">Индекс</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Посмотреть результаты</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="kg">Ваш вес (кг)</string>
    <string name="m">Ваш рост (м)</string>
    <string name="discriptionIndex1">Значение по оценке степени соответствия массы тела и роста.</string>
    <string name="titleIndex1">Индекс массы тела</string>
    <string name="discription">16-18,5 кг/м2 и менее, то наблюдается недостаток массы тела</string>
    <string name="discription1">18,5-25 кг/м2 – норма</string>
    <string name="discription2">25-30 кг/м2 – избыточная масса тела</string>
    <string name="discription3">30-35 кг/м2 – первая степень ожирения</string>
    <string name="discription4">35-40 кг/м2 – вторая степень ожирения</string>
    <string name="discription5">свыше 40 кг/м2 – третья степень ожирения</string>
    <string name="titleIndex2">Уровень двигательный активности</string>
    <string name="countSteps">Количество шагов за день</string>
    <string name="vvod">Введите значение</string>
    <string name="discription11">меньше 5000 шагов в день – «сидячая работа»></string>
    <string name="discription12">7500-9999 шагов в день – «несколько активная работа»</string>
    <string name="discription13">10-12 тыс. шагов – «активный образ жизни»</string>
    <string name="discription14">свыше 12,5 тыс. шагов – «очень активный образ жизни»</string>
    <string name="titleIndex3">Коэффициент выносливости</string>
    <string name="discriptionIndex2">Характеризует функциональное состояние сердечно-сосудистой системы</string>
    <string name="chss">ЧСС</string>
    <string name="disChss">Частота сердечных сокращений</string>
    <string name="sad">САД</string>
    <string name="sadHint">Cистолическое давление</string>
    <string name="dad">ДАД</string>
    <string name="dadHint">Диастолическое давление</string>
    <string name="pd">ПД</string>
    <string name="pdHint">Пульсовое давление</string>
    <string name="discription21">В норме коэффициент выносливости – 16 усл. ед.</string>
    <string name="discription22">уменьшение – на усиление кардиореспираторной системы</string>
    <string name="discription23">увеличение указывает на ослабление деятельности сердечно-сосудистой системы или детренированности обследуемого</string>
    <string name="discription24">пульсовое давление ПД (САД-ДАД) в среднем составляет 40 мм рт.ст.</string>
    <string name="titleIndex4">Уровень регуляции сердечно-сосудистой системы</string>
    <string name="discriptionIndex3">Характеризует функциональное состояние сердечно-сосудистой системы.</string>
    <string name="discriptionH1">Показатели регуляции сердечно-сосудистой системы у спортсменов ниже, чем у нетренированных лиц.</string>
    <string name="discriptionH2">Результаты индекса на студентах РЭУ им. Г.В. Плеханова:  девушки 90-101 усл. ед., юноши 92,3-96 усл. ед.</string>
    <string name="discriptionH3">В процессе регулярных занятий ФКиС значения индекса постепенно снижаются, и могут достигать среднего, выше среднего и высокого уровня регуляции сердечно-сосудистой системы.</string>
    <string name="tx7">Вегетативный индекс Кердо</string>
    <string name="tx8">Индекс функциональных изменений</string>
    <string name="titleIndex5">Жизненный индекс</string>
    <string name="discriptionIndex4">Даёт косвенное представление о функциональных возможностях системы внешнего дыхания.</string>
    <string name="zhel">ЖЕЛ</string>
    <string name="Lungs">Ёмкость лёгких (мл)</string>
    <string name="discriptionLifeIndex1">Норма 50-61 мл/кг.</string>
    <string name="discriptionLifeIndex2">Причины, по которым показатель меньше : недостаточность кислорода в организме, недостаточная ёмкость легких, избыточная масса тела.</string>
    <string name="discriptionLifeIndex3">Если жизненный индекс ниже нормы, то рекомендуются физические упражнения средней интенсивности.</string>
    <string name="discriptionLifeIndex4">На увеличение жизненной емкости легких влияют регулярные занятия физической культурой и спортом.</string>
    <string name="titleIndex6">Циркулярно-респираторный коэффициент</string>
    <string name="discriptionIndex5">Определяет резервы и выносливость дыхательной и сердечно-сосудистой систем.</string>
    <string name="pshHint">Оценка дыхательной системы (с)</string>
    <string name="psh">ПШ</string>
    <string name="discriptionCoef1">Проба Штанге (с), определяющая гипоксическую устойчивость организма (время задержки дыхания на вдохе).</string>
    <string name="discriptionCoef2">Индекс Скибински характеризует состояние сердечно-сосудистой и дыхательной систем.</string>
    <string name="titleIndex7">Вегетативный индекс Кердо</string>
    <string name="discriptionIndex6">Оценка состояния вегетативной нервной системы.</string>
    <string name="discriptionCerdo">Индекс Кердо в норме равен 0 усл. ед. - оптимальный уровень вегетативной регуляции сердечно-сосудистой системы.</string>
    <string name="discriptionCerdo1">При преобладании симпатического тонуса отмечается увеличение.</string>
    <string name="discriptionCerdo2">При преобладании парасимпатического тонуса отмечается снижение индекса.</string>
    <string name="discriptionIndex8">С помощью этого теста оценивают функциональные возможности системы кровообращения.</string>
    <string name="titleIndex8">Индекс функциональных изменений</string>
    <string name="discriptionFunctions1">ИФИ менее 2,6 — функциональные возможности системы кровообращения хорошие.</string>
    <string name="discriptionFunctions2">ИФИ, равный 2,6—3,09 — удовлетворительные функциональные возможности системы кровообращения с умеренным напряжением механизмов регуляции.</string>
    <string name="discriptionFunctions3">ИФИ более 3,09 — сниженные, недостаточные возможности системы кровообращения, наличие выраженных нарушений процессов адаптации.</string>
    <string name="Cont">Продолжить</string>
    <string name="ageHint">Введите возраст</string>
</resources>