<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Functions"
    android:background="#F5F5F5">

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/blue_button"
        android:onClick="viewClick"
        android:text="@string/next"
        android:textColor="#21B6A8"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titleIndex8"
        android:textAlignment="center"
        android:textColor="#00E0D4"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="150dp"
        android:text="@string/discriptionIndex8"
        android:textAlignment="center"
        android:textColor="#00E0D4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chss"
        android:textColor="#FF7930"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintStart_toStartOf="@+id/height" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textColor="#059DC0"
        app:layout_constraintBottom_toTopOf="@+id/height6"
        app:layout_constraintStart_toStartOf="@+id/height6" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dad"
        android:textColor="#059DC0"
        app:layout_constraintBottom_toTopOf="@+id/height5"
        app:layout_constraintStart_toStartOf="@+id/height5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="#FF7930"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintStart_toStartOf="@+id/weight" />


    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sad"
        android:textColor="#FF7930"
        app:layout_constraintBottom_toTopOf="@+id/height4"
        app:layout_constraintStart_toStartOf="@+id/height4" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label2"
        android:textColor="#059DC0"
        app:layout_constraintBottom_toTopOf="@+id/height7"
        app:layout_constraintStart_toStartOf="@+id/height7" />

    <EditText
        android:id="@+id/height"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/disChss"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/height7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/height6"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/m"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/height5"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/dadHint"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/height4"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/sadHint"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/height5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/height7"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/ageHint"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/height4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/kg"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/height6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>